--- a/index.html
+++ b/index.html
@@ -14,23 +14,29 @@
 <body>
 
     <div>
+
+        <nav>
+    <ul>
+        <li><a href="index.html">Home</a>   | </li>
+        <li><a href="pg2.html">How To</a>  |  </li>
+        <li><a href="pg3.html">Why</a>  |  </li>
+        <li><a href="pg4.html">About</a>|  </li>
+    </ul>
+    </nav>
+    
     <h1> Home<h1>
         <p>Hello, so it seems you're worried about your privacy and the potnetial harm that can come due to your social media and the technology allowing you to access this media. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi mollitia non alias, repellat omnis autem nulla aspernatur veritatis culpa architecto perferendis, reiciendis eveniet nesciunt vitae atque fugit, adipisci blanditiis officiis?</p>
     </div>
-    <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#pg2.html">How To</a></li>
-        <li><a href="#About">About</a></li>
-    </ul>
     
         <div>
         <h2>What companies do with your data? </h2>
 
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum molestias maiores incidunt exercitationem odit culpa porro! Facilis iure, enim omnis quis tempora deserunt voluptates natus expedita maxime, magnam, animi officia.</p>
+        <p> It is a naive idea to assume that companies do not do anything with our data. It is simply not the case, even when you opt out of sharing data, they still find a way to procure your data. It may not be all of the data that they had requested for but it is enough for them to make some money off of our data. These big tech companies make money off of our information by selling it to other companies without our permission and next thing you know, that one thing that you've been wanting to buy for a while is all over your social medias because they are psychologically playing you into buying something that you weren't ready to purchase for a while but because they're bombarding you with ads through your social apps. In my opinion, it is a breach of trust between the consumer and company, we should not be psychologically bombarded with ads forcing us into a consumer mindset to spend our money on items we don't fully need.  </p>
         </div>
 
         <div>
             <h3>Why You Should protect yourself!</h3>
+            <p>There are many reasons as to why we should protect our data from these big companies</p>
         </div>
     </body>
         </html>
