--- a/pg2.html
+++ b/pg2.html
@@ -11,6 +11,15 @@
 
 <body>
     <div>
+
+        <nav>
+        <ul>
+            <li><a href="index.html">Home</a>|</li>
+            <li><a href="pg2.html">How To</a>|</li>
+            <li><a href="pg3.html">Why</a>|</li>
+            <li><a href="pg4.html">About</a></li> 
+        </ul> 
+        </nav>
         
     <h1>How to protect yourself</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque a quibusdam nam. Provident id accusamus officia? Voluptatem, fuga. Alias, reiciendis. Laborum vitae a quo similique obcaecati? Inventore debitis fuga vero?</p>
