--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <h2>What companies do with your data? </h2>
 
         <p> It is a naive idea to assume that companies do not do anything with our data. It is simply not the case, even when you opt out of sharing data, they still find a way to procure your data. It may not be all of the data that they had requested for but it is enough for them to make some money off of our data. These big tech companies make money off of our information by selling it to other companies without our permission and next thing you know, that one thing that you've been wanting to buy for a while is all over your social medias because they are psychologically playing you into buying something that you weren't ready to purchase for a while but because they're bombarding you with ads through your social apps. In my opinion, it is a breach of trust between the consumer and company, we should not be psychologically bombarded with ads forcing us into a consumer mindset to spend our money on items we don't fully need.  </p>
-        </div>
+        <img src="cis-img/data.jpg" alt="Picture of data">
+    </div>
 
         <div>
             <h3>Why You Should protect yourself!</h3>
@@ -40,3 +41,5 @@
         </div>
     </body>
         </html>
+
+    
