--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <div>
             <h3>Why You Should protect yourself!</h3>
             <p>There are many reasons as to why we should protect our data from these big companies</p>
+            <img src="cis-img/securekey.jpg" alt="USB key">
         </div>
     </body>
         </html>
