--- a/pg2.html
+++ b/pg2.html
@@ -22,7 +22,7 @@
         </nav>
         
     <h1>How to protect yourself</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque a quibusdam nam. Provident id accusamus officia? Voluptatem, fuga. Alias, reiciendis. Laborum vitae a quo similique obcaecati? Inventore debitis fuga vero?</p>
+    <p>With the ever going rate of technology, we have to adjust and learn how to protect our data and our privacy. Some small ways that you can protect yourself is by opting out of sharing your data with whatever app or technology you're using. For example, some apps don't necessarilt need our personal data but they still ask for it regardless and if you feel as though it isn't necessary for you to put your personal information then don't! It is best to go case by case and how comfortable you feel with sharing your personal data. One other thing that you may do to protect your accounts and privacy is by finding a password manager that can help you keep track of passwords and update them on a regular basis so no one gets the edge on you and gets into any of your personal accounts.</p>
     </div>
 
     <div>
