--- a/pg3.html
+++ b/pg3.html
@@ -22,17 +22,17 @@
         </ul> 
         </nav>
         
-    <h1>How to protect yourself</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque a quibusdam nam. Provident id accusamus officia? Voluptatem, fuga. Alias, reiciendis. Laborum vitae a quo similique obcaecati? Inventore debitis fuga vero?</p>
+    <h1>Why data privacy is important? </h1>
+    <p>Data privacy is important because if left unchecked it allows comapanies to cross boundaries that we as consumers would normally not allow them to cross. These comapanies track your internet footprint and use that info to bombard you with ads or they use it to refine their marketing plans which then would increase their predatory practices. It is great as consumers to be aware so that we don't fall for their predatory practices. It is our data, our information, and I personally believe our information shouldn't be shared without our consent and some companies believe that just because we use their app or technology that they're allowed to do what they want with our data.  </p>
     </div>
 
     <div>
-    <h2>What you can do? </h2>
+    <h2>How to help</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur animi dolorem veritatis excepturi magnam dolorum vero? Aut, doloribus debitis. Quia officia voluptates blanditiis qui molestias, velit commodi provident quo natus?</p>
     </div>
 
     <div>
-        <h3>Fun little projects</h3>
+        <h3></h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet libero eligendi voluptates ducimus eius repudiandae dolores numquam illo rerum consectetur praesentium nostrum odio fuga distinctio, consequuntur dolor voluptatem dignissimos temporibus?</p>
     </div>
 
