--- a/pg2.html
+++ b/pg2.html
@@ -31,7 +31,7 @@
     </div>
 
     <div>
-        <h3>Fun little projects</h3>
+        <h3>Resources</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet libero eligendi voluptates ducimus eius repudiandae dolores numquam illo rerum consectetur praesentium nostrum odio fuga distinctio, consequuntur dolor voluptatem dignissimos temporibus?</p>
     </div>
 
