--- a/pg3.html
+++ b/pg3.html
@@ -23,12 +23,12 @@
         </nav>
         
     <h1>Why data privacy is important? </h1>
-    <p>Data privacy is important because if left unchecked it allows comapanies to cross boundaries that we as consumers would normally not allow them to cross. These comapanies track your internet footprint and use that info to bombard you with ads or they use it to refine their marketing plans which then would increase their predatory practices. It is great as consumers to be aware so that we don't fall for their predatory practices. It is our data, our information, and I personally believe our information shouldn't be shared without our consent and some companies believe that just because we use their app or technology that they're allowed to do what they want with our data.  </p>
+    <p>Data privacy is important because if left unchecked it allows comapanies to cross boundaries that we as consumers would normally not allow them to cross. These comapanies track your internet footprint and use that info to bombard you with ads or they use it to refine their marketing plans which then would increase their predatory practices. It is great as consumers to be aware so that we don't fall for their predatory practices. It is our data, our information, and I personally believe our information shouldn't be shared without our consent and some companies believe that just because we use their app or technology that they're allowed to do what they want with our data. However, that is not the case, it is important for us to protect our data and hold these compaines in check. If it isn't gonna be the government, then it'll be us as consumers that'll hold these big companies in check and make sure they don't cross any more boundaries without any resistence.  </p>
     </div>
 
     <div>
-    <h2>How to help</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur animi dolorem veritatis excepturi magnam dolorum vero? Aut, doloribus debitis. Quia officia voluptates blanditiis qui molestias, velit commodi provident quo natus?</p>
+    <h2>How to help?</h2>
+    <p></p>
     </div>
 
     <div>
