--- a/pg3.html
+++ b/pg3.html
@@ -28,7 +28,7 @@
 
     <div>
     <h2>How to help?</h2>
-    <p></p>
+    <p>In the current moment, there are many generations alive aho are using different apps and technologies and many are unaware of what they're signing up to. For example, it is safe to assume that the older generation just opt in to data tracking without any regard to what it means and how it can affect them. There's no reason for some apps to ask for our location or to track our data from different apps we use. When you really think about it, it doesn't make sense nor is there any need for them to request permission for things that don't correlate with the app. We must let people know of what they're signing up to and how it can affect their digital experience. We must give proper education when it comes to understanding what some people are opting in to or being able to understand the words that they're throwing at us while we are signing up for an app or new technology. We are trying to support a product or company yet they aren't doing the same for us by protecting us and our data. Where is the fairness in that?? We buy or down an app and they turn around and sell our data or ask for permission to access certain things for no logical reason. If it doesn't make sense to you as to why they're asking to access certain settings or content on your phone then don't agree to it.  </p>
     </div>
 
     <div>
