--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
         <nav>
     <ul>
-        <li><a href="index.html">Home</a>   | </li>
-        <li><a href="pg2.html">How To</a>  |  </li>
-        <li><a href="pg3.html">Why</a>  |  </li>
-        <li><a href="pg4.html">About</a>|  </li>
+        <li><a href="index.html">Home</a>  </li>
+        <li><a href="pg2.html">How To</a>  </li>
+        <li><a href="pg3.html">Why</a>  </li>
+        <li><a href="pg4.html">About</a></li>
     </ul>
     </nav>
     
