--- a/pg4.html
+++ b/pg4.html
@@ -21,6 +21,8 @@
             <li><a href="pg4.html">About</a></li>
         </ul> 
         </nav>
+        </div>
+        <div>
         
     <h1>How to protect yourself</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque a quibusdam nam. Provident id accusamus officia? Voluptatem, fuga. Alias, reiciendis. Laborum vitae a quo similique obcaecati? Inventore debitis fuga vero?</p>
