--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </nav>
 </div>
     <div>
-    <h1> Home<h1>
+    <h1> Why You SHould Worry<h1>
         <p>Hello, so it seems you're worried about your privacy and the potnetial harm that can come due to your social media and the technology allowing you to access this media. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi mollitia non alias, repellat omnis autem nulla aspernatur veritatis culpa architecto perferendis, reiciendis eveniet nesciunt vitae atque fugit, adipisci blanditiis officiis?</p>
     </div>
     
