--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </div>
     <div>
     <h1> Why You SHould Worry<h1>
-        <p>Hello, so it seems you're worried about your privacy and the potnetial harm that can come due to your social media and the technology allowing you to access this media. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi mollitia non alias, repellat omnis autem nulla aspernatur veritatis culpa architecto perferendis, reiciendis eveniet nesciunt vitae atque fugit, adipisci blanditiis officiis?</p>
+        <p>Hello, so it seems you're worried about your privacy and the potential harm that can come due to your social media and the technology allowing you to access this media. For example, have you ever browsed in search of a piece of clothing and then next thing you know your instragram or facebook is bombarding you with ads of the product you were literally just searching for and then you get the feeling as if someone is listening in on your device as you see the item you were searching for in all of your apps. You are not alone! This happens to many people and they get the feeling as if someone is watching over them and spying on them when in reality, it is the company that is tracking your information from multiple apps and bombarding you with ads expecting you to buy their product faster. Now, imagine, at a world-wide scale how much harm it could potentially cause. Nowadays, there are kids with tablets and some aren't in a kid friendly mode so these kids are getting bombarded with ads and are being forced into a consumeristic culture before they even have any money to spend.  </p>
     </div>
     
         <div>
