nav bar changes

--- a/pg4.html
+++ b/pg4.html
@@ -8,21 +8,23 @@
    <link rel="stylesheet" href="style.css">
     <title> So You're Worried </title>
 </head>
+<!--Nav bar-->
+<div>
 
-
-<body>
+    <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pg2.html">How To</a></li>
+        <li><a href="pg3.html">Why</a></li>
+        <li><a href="pg4.html">About</a></li>
+    </ul> 
+    </nav>
+    </div>
     <div>
 
-        <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="pg2.html">How To</a></li>
-            <li><a href="pg3.html">Why</a></li>
-            <li><a href="pg4.html">About</a></li>
-        </ul> 
-        </nav>
-        </div>
-        <div>
+        <!--Content-->
+<body>
+    
         
     <h1>How to protect yourself</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque a quibusdam nam. Provident id accusamus officia? Voluptatem, fuga. Alias, reiciendis. Laborum vitae a quo similique obcaecati? Inventore debitis fuga vero?</p>
