--- a/pg3.html
+++ b/pg3.html
@@ -8,21 +8,22 @@
    <link rel="stylesheet" href="style.css">
     <title> So You're Worried </title>
 </head>
+<!--Nav bar-->
+<div>
 
-
+    <nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="pg2.html">How To</a></li>
+        <li><a href="pg3.html">Why</a></li>
+        <li><a href="pg4.html">About</a></li>
+    </ul> 
+    </nav>
+    </div>
+<!--content-->
 <body>
-    <div>
+   
 
-        <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="pg2.html">How To</a></li>
-            <li><a href="pg3.html">Why</a></li>
-            <li><a href="pg4.html">About</a></li>
-        </ul> 
-        </nav>
-        </div>
-        
         <div>
         
     <h1>Why data privacy is important? </h1>
