--- a/pg4.html
+++ b/pg4.html
@@ -26,8 +26,8 @@
 <body>
     
         
-    <h1>How to protect yourself</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque a quibusdam nam. Provident id accusamus officia? Voluptatem, fuga. Alias, reiciendis. Laborum vitae a quo similique obcaecati? Inventore debitis fuga vero?</p>
+    <h1>About me </h1>
+    <p>I am an upcoming programming student that is trying to spread awareness of how invasive some companies are and how easy it is for them to access our information nowadays. As they become more pervasive and eager for our information we must retaliate with knowledge and educate others </p>
     </div>
 
     <div>
