--- a/pg2.html
+++ b/pg2.html
@@ -25,6 +25,7 @@
     
         <div>
     <h1>How to protect yourself</h1>
+    <img src="cis-img/Ad-blocker.jpg" alt="Ad Blocker">
     <p>With the ever growing rate of technology, we have to adjust and learn how to protect our data and our privacy. Some small ways that you can protect yourself is by opting out of sharing your data with whatever app or technology you're using. For example, some apps don't necessarily need our personal data but they still ask for it regardless and if you feel as though it isn't necessary for you to put your personal information then don't! It is best to go case by case and how comfortable you feel with sharing your personal data. One other thing that you may do to protect your accounts and privacy is by finding a password manager that can help you keep track of passwords and update them on a regular basis so no one gets the edge on you and access your account without your consent. You can also set up a two-step authentication procedure where you connect your phone or email and before you're allowed to log in they send you a secure code to log-in successfully. It prevents people from logging into your account with just your password. Lastly, you can make your browsing experience simpler by installing an adblocker which would prevent companies from tracking your data while your browsing through sites and on top of that it'll get rid of those annoying popup ads that quite frankly ruin the browsing experience. These are just small examples of what you can do to protect your privacy for your sake and others. </p>
     </div>
 
