--- a/pg4.html
+++ b/pg4.html
@@ -27,7 +27,7 @@
     
         
     <h1>About me </h1>
-    <p>I am an upcoming programming student that is trying to spread awareness of how invasive some companies are and how easy it is for them to access our information nowadays. As they become more pervasive and eager for our information we must retaliate with knowledge and educate others </p>
+    <p>I am an upcoming programming student that is trying to spread awareness of how invasive some companies are and how easy it is for them to access our information nowadays. As they become more pervasive and eager for our information we must retaliate with knowledge and the education of others. </p>
     </div>
 
     <div>
