--- a/pg4.html
+++ b/pg4.html
@@ -32,7 +32,9 @@
 
     <div>
     <h2>Contact </h2>
-    <p>If you have any ideas as to how we can better protect ourselves, feel free to email me and I shall make sure it gets shared with others.</p>
+    <p>If you have any ideas as to how we can better protect ourselves, feel free to email me and I shall make sure it gets shared with others. We must inform our fellow brethren and protect ourselves from these big companies and their consumeristic culture.</p>
+    <a href="mailto:aborja@phx.yearup.org, mailto:adr2186286@maricopa.edu">Email Me</a>
+    <a href="https://www.linkedin.com/in/adrian-borja-a1053b1<b7/">LinkedIn</a>
     </div>
 
     
